yamls/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: myapp
