yamls/app/ingress-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myapp
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`myapp-traefik.com`)
      services:
        - name: myapp
          port: 80
  tls:
    secretName: myapp-traefik-tls
